--- a/index.html
+++ b/index.html
@@ -1,77 +1,137 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bitirme Projesi - Quad-Core</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f8f9fa;
-      color: #333;
-      line-height: 1.6;
-      margin: 40px;
-    }
-    h1 {
-      color: #F68F30;
-    }
-    h2 {
-      margin-top: 30px;
-      color: #222;
-    }
-    p, li {
-      font-size: 16px;
-    }
-    a {
-      color: #F68F30;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    ul {
-      list-style-type: square;
-      margin-left: 20px;
-    }
-    .section {
-      margin-bottom: 25px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>BIL495 - QUAD-CORE | GUIDE Project</title>
+
+    <style>
+        body {
+            margin: 0;
+            font-family: Helvetica, Arial, sans-serif;
+            background: linear-gradient(180deg, #2c5aa0 0%, #4fa3d1 45%, #f7f9fc 45%);
+            color: #1f2933;
+        }
+
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 60px 24px 80px 24px;
+        }
+
+        header {
+            text-align: center;
+            color: white;
+            margin-bottom: 80px;
+        }
+
+        header h1 {
+            font-size: 42px;
+            letter-spacing: 1.5px;
+            margin: 0;
+            font-weight: 700;
+        }
+
+        header .divider {
+            width: 120px;
+            height: 2px;
+            background-color: rgba(255,255,255,0.7);
+            margin: 24px auto;
+        }
+
+        header h2 {
+            font-size: 22px;
+            font-weight: 400;
+            margin: 0;
+            opacity: 0.9;
+        }
+
+        section {
+            background-color: white;
+            border-radius: 12px;
+            padding: 36px 40px;
+            margin-bottom: 40px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+        }
+
+        section h3 {
+            margin-top: 0;
+            font-size: 20px;
+            letter-spacing: 0.5px;
+            border-bottom: 1px solid #e5e7eb;
+            padding-bottom: 12px;
+            margin-bottom: 20px;
+        }
+
+        .team {
+            font-size: 16px;
+            line-height: 1.8;
+        }
+
+        .reports ul {
+            list-style: none;
+            padding-left: 0;
+            margin: 0;
+        }
+
+        .reports li {
+            margin-bottom: 14px;
+            font-size: 16px;
+        }
+
+        .reports a {
+            text-decoration: none;
+            color: #2563eb;
+            font-weight: 500;
+        }
+
+        .reports a:hover {
+            text-decoration: underline;
+        }
+
+        footer {
+            text-align: center;
+            font-size: 14px;
+            color: #6b7280;
+            margin-top: 60px;
+        }
+    </style>
 </head>
+
 <body>
-  <h1>Bitirme Projesi</h1>
 
-  <div class="section">
-    <h2>Grup Bilgileri</h2>
-    <p><strong>Grup Adı:</strong> Quad-Core</p>
-    <p><strong>Project Manager (PM):</strong> Ebrar Sude Doğan</p>
-    <p><strong>Scrum Master (SM):</strong> Kayrahan Toprak Tosun</p>
-  </div>
+    <div class="container">
 
-  <div class="section">
-    <h2>Grup Üyeleri</h2>
-    <ul>
-      <li>Ebrar Sude Doğan</li>
-      <li>Kayrahan Toprak Tosun</li>
-      <li>Erdem Baran</li>
-      <li>Tuna Kodal</li>
-    </ul>
-  </div>
+        <header>
+            <h1>BIL495 – QUAD-CORE</h1>
+            <div class="divider"></div>
+            <h2>GUIDE Project</h2>
+        </header>
 
-  <div class="section">
-    <h2>Bağlantılar</h2>
-    <p>
-      📂 <strong>Google Drive:</strong> 
-      <a href="https://drive.google.com/drive/folders/1lyXuqaJ0JrhiMycv8PPHxm4y8imNcxqK?usp=sharing" target="_blank">
-        https://drive.google.com/drive/folders/1lyXuqaJ0JrhiMycv8PPHxm4y8imNcxqK?usp=sharing
-      </a>
-    </p>
-    <p>
-      📋 <strong>Sprint Board (Jira):</strong> 
-      <a href="https://quadcore.atlassian.net/jira/software/projects/BP/boards/34/timeline?timeline=MONTHS" target="_blank">
-        https://quadcore.atlassian.net/jira/software/projects/BP/boards/34/timeline?timeline=MONTHS
-      </a>
-    </p>
-  </div>
+        <section>
+            <h3>Team Members</h3>
+            <div class="team">
+                Ebrar Sude Doğan<br>
+                Erdem Baran<br>
+                Kayrahan Toprak Tosun<br>
+                Tuna Kodal
+            </div>
+        </section>
+
+        <section class="reports">
+            <h3>Reports</h3>
+            <ul>
+                <li><a href="#">Project Proposal</a></li>
+                <li><a href="#">Project Specifications Report</a></li>
+                <li><a href="#">Analysis Report</a></li>
+                <li><a href="#">High-Level Design Report</a></li>
+            </ul>
+        </section>
+
+        <footer>
+            BIL495 – Graduation Project | 2025–2026
+        </footer>
+
+    </div>
+
 </body>
 </html>
