--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
         <section class="reports">
             <h3>Reports</h3>
             <ul>
-                <li><a href="https://www.overleaf.com/read/rmgvkrchkhsw#31b21f">Project Proposal</a></li>
-                <li><a href="https://www.overleaf.com/read/tskmndjdspkr#94cf1e">Project Specifications Report</a></li>
-                <li><a href="https://www.overleaf.com/read/pchdsztymddx#7f35dd">Analysis Report</a></li>
-                <li><a href="https://www.overleaf.com/read/kndpsmvnrtkp#5630a3">High-Level Design Report</a></li>
+                <li><a href="https://drive.google.com/file/d/1woBbmjVCYNliDngYp6nbhJTsHZChBTch/view?usp=drive_link">Project Proposal</a></li>
+                <li><a href="https://drive.google.com/file/d/1xfSPm-K4y9fyR-GVyxXrauDtjMqKS2Al/view?usp=drive_link">Project Specifications Report</a></li>
+                <li><a href="https://drive.google.com/file/d/1HKqs9qHwcYF9--vnQ21ki1gvNvJyx4BA/view?usp=drive_link">Analysis Report</a></li>
+                <li><a href="https://drive.google.com/file/d/1I7E4MqfOnVWP7kQFtoSvkFbDr-NIfia6/view?usp=drive_link">High-Level Design Report</a></li>
             </ul>
         </section>
 
