--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
         <section class="reports">
             <h3>Reports</h3>
             <ul>
+				<li><a href="https://drive.google.com/file/d/1s32r7IKShne_FsmK2q_L8EfXrPBuYGhN/view?usp=drive_link">Low-Level Design Report</a></li>
                 <li><a href="https://drive.google.com/file/d/1_2F5lGD-S0vp71V_LpXpUKqL6MAdkSli/view?usp=drive_link">Project Proposal</a></li>
                 <li><a href="https://drive.google.com/file/d/1WdyhUqbOTlkESAJeutuQQBnFBmwgFHPr/view?usp=drive_link">Project Specifications Report</a></li>
                 <li><a href="https://drive.google.com/file/d/1z7VmKhSk-vUbCj3ecegezWWCVZie8lNQ/view?usp=drive_link">Analysis Report</a></li>
